[project]
name = "comfyui-phi"
description = "Custom nodes to run microsoft/Phi models."
version = "3.0.2"
license = { text = "Apache License 2.0" }
dependencies = ["accelerate>=0.31.0"]

[project.urls]
Repository = "https://github.com/alexisrolland/ComfyUI-Phi"

[tool.comfy]
PublisherId = "alexisrolland"
DisplayName = "ComfyUI-Phi"
Icon = ""
